@@ -33,9 +33,9 @@ To Do:
   they dont apply and confuse users. try to remove unused gui options 
 - change edit formula widgets to auto add the missing COMP step instead of warning user.
 - create CUS tutorial.
+- add more indicator functions to existing plugins ie. Chaikin, Volume osc's etc.
 
-  
-    
+
 
 Maybe some day:
 ===============
